# PDF-RAG-QNA-API

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: api.py  config.py  database.py  main.py  models.py  queue.py  repositories.py  schemas.py  tasks.py  worker.py
app/services/: cache.py  chunking.py  llm.py  pdf.py
app/static/: app.js  index.html  styles.css
