[project]
name = "pdf-rag-api"
version = "0.1.0"
description = "FastAPI RAG service for uploading PDFs and asking grounded questions."
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "arq>=0.26.1",
    "asyncpg>=0.29.0",
    "fastapi>=0.111.0",
    "greenlet>=3.0.3",
    "openai>=1.40.0",
    "pgvector>=0.3.2",
    "pydantic-settings>=2.3.4",
    "pypdf>=4.3.1",
    "python-multipart>=0.0.9",
    "redis>=5.0.7",
    "sqlalchemy[asyncio]>=2.0.31",
    "tiktoken>=0.7.0",
    "uvicorn[standard]>=0.30.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
